network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-staginginternaltableau
spec:
  podSelector:
    matchLabels:
      name: staginginternaltableau
  ingress:
    - from:
    - namespaceSelector:
        matchLabels:
          name: ingress-external
    - podSelector:
        matchLabels:
          name: ingress
    - ports:
      - protocol: TCP
        port: 10443
